# rdocs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yaml
rdocs/: Cargo.toml
rdocs/fixtures/diff/: file-2.md
rdocs/fixtures/with_config/: exclude.rs  parser.yaml  test.rs
rdocs/src/: collect.rs  errors.rs  lib.rs  out.rs  parser.rs  pattern.rs  replacer.rs
rdocs/src/snapshots/: rdocs__parser__tests__[invalid_in_multiple_pattern].snap  rdocs__parser__tests__[invalid_single_pattern].snap  rdocs__parser__tests__[valid_multiple_patterns].snap  rdocs__parser__tests__[valid_single_pattern].snap  rdocs__parser__tests__can_create_content_metadata.snap  rdocs__parser__tests__can_create_new_content_instance.snap  rdocs__parser__tests__can_extract.snap  rdocs__parser__tests__patter_not_equal.snap  rdocs__pattern__tests__default_pattern.snap  rdocs__replacer__tests__can_replace.snap  rdocs__replacer__tests__replace_with_save-2.snap  rdocs__replacer__tests__replace_with_save.snap
rdocs/tests/: cli_test.rs
rdocs/tests/cmd/: collect-from-external-config.trycmd  collect-stdout._trycmd  help.trycmd  replace-with-dry-run.trycmd  replace.toml  save-to-files.toml
rdocs/tests/cmd/replace.in/: test.rs
rdocs/tests/cmd/replace.out/: file-2.md  file1.md
rdocs/tests/cmd/save-to-files.in/: adding_numbers  greet_person  total_example
