[package]
name = "rdocs"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/kaplanelad/rdocs"
description = "Code Documentation Made Simple"
license = "Apache-2.0"
homepage = "https://github.com/kaplanelad/rdocs"
documentation = "https://docs.rs/rdocs"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]

[dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
], optional = true }
regex = { version = "1.10.3" }
ignore = { version = "0.4.22" }
rayon = { version = "1.9.0" }
thiserror = { version = "1.0.57" }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.197" }
serde_yaml = { version = "0.9.32" }
serde_json = { version = "1.0.114" }
serde_regex = { version = "1.1.0" }
clap = { version = "4.5.2", features = ["std", "derive"], optional = true }
tabled = { version = "0.15.0", optional = true }

[features]
default = ["cli"]
# list optionals here:
cli = ["dep:clap", "dep:tracing-subscriber", "dep:tabled"]

[[bin]]
name = "rdocs"
required-features = ["cli"]

[dev-dependencies]
insta = { version = "1.36.1", features = ["redactions", "filters"] }
tree-fs = { version = "0.1.0" }
trycmd = "0.15.0"
